Closed Bug 168719 Opened 23 years ago Closed 23 years ago

Crash while switching tabs (or at least hovering around tabs) [@ NSToolTipManager displayToolTip]

Categories

(Camino Graveyard :: Tabbed Browsing, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
Camino0.7

People

(Reporter: nguyenhm16, Assigned: mikepinkerton)

References

Details

(Keywords: crash, qawanted, topcrash)

Crash Data

Attachments

(2 files)

Navigator build: 2002091322 Date/Time: 2002-09-14 17:35:47 -0500 OS Version: 10.2 (Build 6C115) Host: mnguyen-pb.local. Command: Navigator PID: 2721 Exception: EXC_BAD_ACCESS (0x0001) Codes: KERN_PROTECTION_FAILURE (0x0002) at 0x00000075 Thread 0 Crashed: #0 0x9068ba54 in objc_msgSend #1 0x9334a95c in -[NSToolTipManager displayToolTip:] #2 0x9334b7c0 in toolTipTimerFired #3 0x90163884 in __CFRunLoopDoTimer #4 0x901493e8 in __CFRunLoopRun #5 0x90181578 in CFRunLoopRunSpecific #6 0x92ba34cc in RunCurrentEventLoopInMode #7 0x92bb326c in ReceiveNextEventCommon #8 0x92bda280 in BlockUntilNextEventMatchingListInMode #9 0x93082184 in _DPSNextEvent #10 0x930ccf84 in -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] #11 0x930ca500 in -[NSApplication run] #12 0x930d2598 in NSApplicationMain #13 0x00005204 in _start (crt.c:267) #14 0x00005084 in start Thread 1: #0 0x90074328 in mach_msg_trap #1 0x90006670 in mach_msg #2 0xc00076a4 in __ape_internal #3 0xc0000e08 in __ape_agent #4 0x90021428 in _pthread_body Thread 2: #0 0x90025e8c in select #1 0x0101c5a0 in poll #2 0x01018d74 in _pr_poll_with_poll #3 0x0016f58c in nsSocketTransportService::Run() #4 0x05052ac4 in nsThread::Main(void*) #5 0x0101a1e0 in _pt_root #6 0x90021428 in _pthread_body Thread 3: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x0101541c in PR_WaitCondVar #3 0x0013e584 in nsDNSService::DequeuePendingQ() #4 0x0013dfb0 in nsDNSService::Run() #5 0x05052ac4 in nsThread::Main(void*) #6 0x0101a1e0 in _pt_root #7 0x90021428 in _pthread_body Thread 4: #0 0x90042d68 in semaphore_timedwait_signal_trap #1 0x9003ef94 in _pthread_cond_wait #2 0x010151e0 in pt_TimedWait #3 0x01015430 in PR_WaitCondVar #4 0x050563d8 in TimerThread::Run() #5 0x05052ac4 in nsThread::Main(void*) #6 0x0101a1e0 in _pt_root #7 0x90021428 in _pthread_body Thread 5: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x0101541c in PR_WaitCondVar #3 0x05053bb0 in nsThreadPool::GetRequest(nsIThread*) #4 0x0505449c in nsThreadPoolRunnable::Run() #5 0x05052ac4 in nsThread::Main(void*) #6 0x0101a1e0 in _pt_root #7 0x90021428 in _pthread_body Thread 6: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x90824180 in -[NSConditionLock lockWhenCondition:] #3 0x933515f4 in -[NSUIHeartBeat _heartBeatThread:] #4 0x9081cd38 in forkThreadForFunction #5 0x90021428 in _pthread_body PPC Thread State: srr0: 0x9068ba54 srr1: 0x0200f030 vrsave: 0x00000000 xer: 0x20000000 lr: 0x9334a95c ctr: 0x9068ba3c mq: 0x00000000 r0: 0x9334a95c r1: 0xbfffede0 r2: 0x24004280 r3: 0x032e9eb0 r4: 0x906cc394 r5: 0x906dd968 r6: 0x00000000 r7: 0x441d8000 r8: 0x00000000 r9: 0xa309a8b0 r10: 0x44900000 r11: 0xa3072cf8 r12: 0x00000075 r13: 0x00000000 r14: 0x00000000 r15: 0x00000001 r16: 0x00000000 r17: 0x00000000 r18: 0x22004420 r19: 0x00000001 r20: 0x00000001 r21: 0xa309a8b0 r22: 0xa309a8b0 r23: 0x00d39308 r24: 0x00000000 r25: 0x00000000 r26: 0x01ebe790 r27: 0x027e1ee0 r28: 0xa0131674 r29: 0x906dd968 r30: 0x906de0a0 r31: 0x9334a8b0
Mike, for future reference, crash reports should be attached to your bugs as a text file, and not quoted in a bug comment. Can you be more specific about what you were doing when Chimera crashed? Based on the stack, it looks like Chimera could have been trying to show a tooltip on one of the tab titles.
Keywords: crash
Summary: Crash while switching tabs (or at least hovering around tabs) → Crash while switching tabs (or at least hovering around tabs) [@ objc_msgSend]
this stack is in OS code, fwiw. i don't think there's anything we can do about it, especially w/out steps to repro. reopen if we can find real steps to repro.
Status: UNCONFIRMED → RESOLVED
Closed: 23 years ago
Resolution: --- → INVALID
v
Status: RESOLVED → VERIFIED
Encountered this crash using Chimera/2002092304 on 10.1.5. I had five tabs open to various Bugzilla bugs, then dragged a link to bug 149230 from one tab to another tab, and then Chimera crashed. I couldn't subsequently reproduce it.
Reopening.
Status: VERIFIED → UNCONFIRMED
Resolution: INVALID → ---
richard? any ideas?
This stack also appears in bug 159380. Is this a dup?
*** Bug 159380 has been marked as a duplicate of this bug. ***
*** Bug 171858 has been marked as a duplicate of this bug. ***
Marking confirmed per comment 4.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Crash while switching tabs (or at least hovering around tabs) [@ objc_msgSend] → Crash while switching tabs (or at least hovering around tabs) [@ NSToolTipManager displayToolTip]
i have crash with this only once (2002.11.01.04, 10.2.1). i've found it really tricky to get reliable steps for this, so if anyone has a reliable recipe, that'd be great. when i did crash i had 6 tabs open, with the 2nd one from the left in front. i was hovering the pointer over the 2nd tab widget and noticed that it had the wrong tooltip --somehow the tooltip for the 1st tab (leftmost) was displayed. i was shifting the pointer slightly to the left and right, and finally got the correct tooltip (for the 2nd tab) to display, then chimera crashed. unfortunately, i cannot seem to get into that weird state again.
Keywords: qawanted
um, i don't get tooltips on the tab widgets. what am i missing?
You have to make enough tabs that their titles start to truncate (e.g. > 4).
Target Milestone: --- → Chimera0.7
It doesn't seem to matter how long the titles are, for me. I need to have 4 tabs open before I start getting tooltips.
I've had many chrashes when switching tabs while one tab is reloading or loading. Not so much that I can't use Chimera, but enough to be annoying. I'm using 0.6.0 but it happened with earlier versions as well. I have an iBook with 10.2.1 and 640MB.
This sounds like a crash problem I've had repeatedly. Here are the actions I've identified as consistently preceding the crash. 1. There are usually 3 tabs or more active. 2. At least one of the tabs is at a site that uses a cgi script to write files to disk. 3. In addition to having switched between tabs several times prior to the crash, I have also been switching between apps several times, using command-H to hide Navigator while using the other app. 4. The crash seems to occur in connection with executing the cgi script. The last 2 times it occurred just after I had executed the script. Maybe out of this list, you'll find something that intersects with someone else's experience. I'm also attaching my last crash log. The Talkback does not work with this because the crash freezes Navigator and requires a force quit.
Attached file Crash log
Crash log attached in reference to my last comment.
I've seen this once every few days for a while now. But, I haven't been able to systematically reproduce it.
I also receive this crash generally about once per day with moderate browser usage. I have five or six crash logs from the last several days that look similar to the crash log posted. Would it be helpful to post these? OS X 10.2.2 Chimera 0.6.0 I haven't been watching very carefully when the crash(es) occurred - I don't remember specifically what triggered the crash. Usage is one browser window open, generally 6-10 tabs.
Ditto the other comments. I use tabs heavily and switch back and forth alot. I've also noticed tha when I do get tool tips on the tabs that they are never right (usually giving a tip for another tab). This bug is a real blocker for me, as it has made me temporarily switch back to Mozilla a few times. I'm running 0.6 on 10.2.2 and I have crash logs if anyone wants them.
the more i dig into this, the more i'm convinced it's an apple bug. there's code in NSTabView/NSTabViewItem that rejiggers the tooltip rects whenever a new tab is added, removed, or changes its text. The bug, i'm sure, is in that code. The only workaround i can see is to stub out the routine that cleans up tooltip rects to a no-op and just not have tooltips at all on tabs. hopefully, that would fix the crash until we can get apple to fix (which may be never, just try convincing them this is their bug).
Something I noticed that might be helpful. It doesn't seem to matter where my cursor is when this crash occurs. The one thing that seems to precipitate it is loading or reloading a page (or excecuting a script on a page which essentially does the same as loading or reloading). Usually it occurs just after the page loads. I always have 3-4 tabs in use at the time, and I have always been using Chimera for a while, including switching between tabs and apps. It's like there's a buildup somewhere until it overloads.
fix is to disable the tabs. opened new bug to resolve that issue, but that's not a blocker for anything at this stage. http://bugzilla.mozilla.org/show_bug.cgi?id=183279
Status: NEW → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
I'm hoping this is a temporary fix. I would rather have an occasional crash than not use tabbed browsing. I need to use 2 sites to build a third Web site, plus I keep an extra tab up to be sure I don't forget to check the message board. That's 4 tabs altogether. I'm beta testing Opera. Maybe I'll see if it can handle this task without crashing.
> fix is to disable the tabs. I assume you meant the fix is to disable the tooltips, not the tabs themselves, right?
vrfy'd fixed when using builds since 12/4. i haven't encountered this crash (which seemed especially prevalent on 10.2). simon and i have looked through the recent talkback data, and haven't seen this crash with recent builds, either.
Status: RESOLVED → VERIFIED
crash log in bug 185020 looks different, but the symptoms are similar. any connection? -matt
Crash Signature: [@ NSToolTipManager displayToolTip]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: