disable tooltips on browser tabs to work around an apple bug (bug 168719)